tests/ui/impl-trait/unsized_coercion3.old.stderr
error[E0277]: the trait bound `dyn Send: Trait` is not satisfied
  --> $DIR/unsized_coercion3.rs:16:32
   |
LL |         let y: Box<dyn Send> = x;
   |                                ^ the trait `Trait` is not implemented for `dyn Send`
   |
   = help: the trait `Trait` is implemented for `u32`

error[E0277]: the trait bound `dyn Send: Trait` is not satisfied
  --> $DIR/unsized_coercion3.rs:11:19
   |
LL | fn hello() -> Box<impl Trait + ?Sized> {
   |                   ^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `dyn Send`
   |
   = help: the trait `Trait` is implemented for `u32`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
